2006-06-20 [paul]	2.3.1cvs1

	* NEWS
	* README
	* configure.ac
		Update version number following
		stable release

2006-06-20 [colin]	2.3.0cvs26

	* src/compose.c
		When dragging a file to the text of the compose
		window, ask whether we want to insert or attach
		(I know lots of people who do that to attach)

2006-06-20 [colin]	2.3.0cvs25

	* src/etpan/imap-thread.c
		Fix threshold (the append command is often > 32 bytes)

2006-06-19 [colin]	2.3.0cvs24

	* src/imap.c
	* src/etpan/imap-thread.c
		Workaround Rockliffe IMAP server bug: replace
		"x UID SEARCH (ANSWERED UID 1:*)" with
		"x UID SEARCH ANSWERED"
		(Rockliffe doesn't handle the parenthesis)

2006-06-19 [colin]	2.3.0cvs23

	* src/compose.c
	* src/imap.c
	* src/etpan/imap-thread.c
		Probably fix bug #972 (Freezes when adding 
		an attachment to the message)
	* src/common/defs.h
		Modernize Firefox cmd


2006-06-18 [colin]	2.3.0cvs22

	* src/prefs_customheader.c
		Only allow correct filenames for various
		custom headers

2006-06-18 [colin]	2.3.0cvs21

	* src/prefs_customheader.c
		Add a 'From File...' button in custom headers prefs, which
		try to do the right thing: 
		for normal headers, use file as plaintext,
		for X-Face, calls compface,
		for Face, encode to b64.

2006-06-17 [colin]	2.3.0cvs20

	* src/mh.c
		Warning fix

2006-06-16 [colin]	2.3.0cvs19

	* src/summaryview.c
		Recursive quicksearch: show message list
		in current folder, *then* search children
		in the background.

2006-06-16 [colin]	2.3.0cvs18

	* src/main.c
		Instead of ignoring SIGPIPE, save caches
		when getting one. Will fix the fact that
		hot caches are out-of-date when logging 
		out of Xorg.
	* src/compose.c
	* src/prefs_compose_writing.c
		Only save text (not attachments) when 
		auto-saving to drafts
	* src/unmime.c
		Always replace \n, \r and \t with spaces
		in headers
	* manual/dist/html/Makefile.am
	* manual/dist/pdf/Makefile.am
	* manual/dist/ps/Makefile.am
	* manual/dist/txt/Makefile.am
	* manual/fr/dist/html/Makefile.am