@@ -316,6 +316,7 @@ static void alertpanel_create(const gchar *title,
 	gtk_label_set_justify(GTK_LABEL(label), GTK_JUSTIFY_LEFT);
 	gtk_label_set_line_wrap(GTK_LABEL(label), TRUE);
 	gtk_label_set_selectable(GTK_LABEL(label), TRUE);
+	gtk_label_set_use_markup(GTK_LABEL(label), TRUE);
 	GTK_WIDGET_UNSET_FLAGS(label, GTK_CAN_FOCUS);
 	gtk_box_pack_start(GTK_BOX(vbox), label, FALSE, FALSE, 0);
 	gtk_widget_show(label);
